Revert "Bjorncs/apache commons libraries cleanup"