@@ -1,6 +1,7 @@
 // Copyright 2020 Oath Inc. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.testrunner;
 
+import org.apache.commons.io.IOUtils;
 import org.junit.Test;
 
 import java.io.IOException;
@@ -27,7 +28,7 @@ public class PomXmlGeneratorTest {
     }
 
     private void assertFile(String resourceFile, String actual) throws IOException {
-        String expected = new String(this.getClass().getResourceAsStream(resourceFile).readAllBytes());
+        String expected = IOUtils.toString(this.getClass().getResourceAsStream(resourceFile));
         assertEquals(resourceFile, expected, actual);
     }
 
